--- a/integrantes.html
+++ b/integrantes.html
@@ -107,13 +107,13 @@
 			<p>Analista de Redes</p>
         </div>
         <div class="photo">
-            <img src="fotos/foto4.jpeg" alt="Foto 4">
+            <img src="fotos/foto4.jpg" alt="Foto 4">
             <p>Lucas Gabriel</p>
 			<p>19 anos</p>
 			<p>Eletricista</p>
         </div>
         <div class="photo">
-            <img src="fotos/foto5.jpeg" alt="Foto 5">
+            <img src="fotos/foto5.jpg" alt="Foto 5">
             <p>Ismar</p>
 			<p>31 anos</p>
 			<p>Analista de Marketing</p>	
@@ -122,7 +122,7 @@
 			<p></p>
         </div>
         <div class="photo">
-            <img src="fotos/foto6.jpeg" alt="Foto 5">
+            <img src="fotos/foto6.jpg" alt="Foto 5">
             <p>Lucas</p>
 			<p>21 anos</p>
 			<p>Analista de Redes</p>
